--- a/style.css
+++ b/style.css
@@ -74,3 +74,11 @@ div.wikipedia img, div.weather img {
 	margin-left: auto;
 	margin-right: auto;
 }
+
+
+.disabled {
+	//border: 5px solid red;
+	opacity: 0.2;
+	//background: rgba(39,62,84,0.82) !important;
+	pointer-events: none;
+}
