--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 
-
 body {
 	background-color: #123;
 }
@@ -53,6 +52,7 @@ div.main-links img {
 	display: inline;
 	border: none;
 	font-size: none;
+	background-color: white;
 }
 
 
