--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ a, a:visited, a:hover, a:active {
 
 .grid-cell {
 	/*background-color: #222831;*/
-	background-color: #232323;
+	background-color: #1a1a1a;
 	border-radius: 10px;
 }
 
@@ -171,11 +171,11 @@ a, a:visited, a:hover, a:active {
   width: 3.6875em;
   height: 3.6875em;
   margin: -1.84375em;
-  background: #232323;
+  background: #1a1a1a;
   border-radius: 50%;
   box-shadow:
-    -2.1875em 0.6875em 0 -0.6875em #232323,
-    2.0625em 0.9375em 0 -0.9375em #232323,
+    -2.1875em 0.6875em 0 -0.6875em #1a1a1a,
+    2.0625em 0.9375em 0 -0.9375em #1a1a1a,
     0 0 0 0.375em #fff,
     -2.1875em 0.6875em 0 -0.3125em #fff,
     2.0625em 0.9375em 0 -0.5625em #fff;
@@ -188,7 +188,7 @@ a, a:visited, a:hover, a:active {
   display: block;
   width: 4.5625em;
   height: 1em;
-  background: #232323;
+  background: #1a1a1a;
   box-shadow: 0 0.4375em 0 -0.0625em #fff;
 }
 .cloud:nth-child(2) {
@@ -262,7 +262,7 @@ a, a:visited, a:hover, a:active {
   width: 3.75em;
   height: 3.75em;
   margin: 0.375em 0 0 -2em;
-  background: #232323;
+  background: #1a1a1a;
 }
 
 .rain:after {
